--- a/public/css/main.css
+++ b/public/css/main.css
@@ -199,11 +199,16 @@ body {
     margin-top: 5px;
 }
 
+div .post:not(:last-child) {
+    border-bottom: 1px solid #cecece;
+}
 .post {
-    margin-left: 17px;
-    margin-top: 9px;
+    padding: 10px 8px;
 }
 
+.postWapper {
+    padding:10px;
+}
 .name {
     font-size: 18px;
     font-weight: bold;
@@ -230,4 +235,24 @@ body {
 .inline
 {
     display: inline;
+    padding-top:10px;
+    padding-bottom: 15px;
+}
+.profileName
+{
+    width: 70%;
+    padding-left: 5%;
+}
+.right{
+    float: right;
+}
+.profileWrapper
+{
+    display: inline-flex;
+    width: 100%;
+    clear: both;
+}
+.profilePeople
+{
+    width: 100%;
 }
