--- a/public/css/main.css
+++ b/public/css/main.css
@@ -124,6 +124,8 @@ body {
     height: 100px;
     border-radius: 50% !important;
     text-align: center;
+    margin-top: 4%;
+
 }
 
 .avatar1 {
@@ -132,11 +134,18 @@ body {
     height: 30px;
     border-radius: 50% !important;
     text-align: center;
+
 }
 
 .center {
     text-align: center;
 }
+.imgWrapper
+{
+    text-align: center;
+    margin-top: 10%;
+}
+
 
 
 /* Form chat */
@@ -255,4 +264,13 @@ div .post:not(:last-child) {
 .profilePeople
 {
     width: 100%;
+}
+.imgWrapper1
+{
+    text-align: center;
+    margin-top: 5%;
+
+}
+.post1{
+    margin-top: 3%;
 }
