--- a/public/css/main.css
+++ b/public/css/main.css
@@ -260,6 +260,7 @@ div .post:not(:last-child) {
     display: inline-flex;
     width: 100%;
     clear: both;
+
 }
 .profilePeople
 {
@@ -287,7 +288,7 @@ div .post:not(:last-child) {
 {
     vertical-align: middle;
     width: 200px;
-
+    height: 200px;
     border-radius: 50% !important;
     text-align: center;
     margin-top: 4%;
@@ -310,4 +311,7 @@ div .post:not(:last-child) {
 {
     margin-bottom: 12%;
     padding-right:12%;
+}
+.margin-bottom{
+    margin-bottom:2% ;
 }
