complete_chat_ajax

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -283,7 +283,7 @@ div .post:not(:last-child) {
 .text-list {
   height: 70%;
   width: 85%;
-  display: auto;
+  overflow: auto;
 
 }
 .header-chat {
