--- a/public/css/main.css
+++ b/public/css/main.css
@@ -327,4 +327,31 @@ div .post:not(:last-child) {
 .messenger{
   width: 70%;
 }
-
+.profileWrapper1{
+  margin-top:-17px;
+}
+.title-admin{
+  font-size: 18px;
+  font-family: Nunito,sans-serif;
+  font-weight: bold;
+  margin-top:10px;
+  margin-bottom: 10px;
+  padding-left: 15px;
+}
+.title-admin-info{
+  width: 100%;
+  font-size: 18px;
+  font-family: Nunito,sans-serif;
+  font-weight: bold;
+  margin-bottom: 10px;
+  padding: 10px;
+  border: 1px solid ;
+}
+.left-bar-admin{
+  padding-left: 0;
+  padding-right: 0;
+}
+.report-form{
+  padding-bottom: 15px;
+  padding-top: 20px;
+}
