--- a/public/css/main.css
+++ b/public/css/main.css
@@ -431,3 +431,12 @@ a.tag_like.non-textdecoration{
   color: red;
   text-decoration: none;
 }
+body{padding-top:30px;}
+
+.glyphicon {  margin-bottom: 10px;margin-right: 10px;}
+
+small {
+  display: block;
+  line-height: 1.428571429;
+  color: #999;
+}
